# services_manager_server

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yml  rust-clippy.yml
.sqlx/: query-0137a8e4f27051dfccfb79da48211f5bb0fd54079f082b337b0eff84add7432d.json  query-0b3d1cf81684128484ac99bcc2259773a5e8fc6f2499f3fa7c085fc4d21e0d91.json  query-307f9c07b9c5cd0b88be896f0a6ce4891d1c84f7c987fc4614d727bbe72f5540.json  query-84f0d257d3e3a033848820a88875e9f19e6e41ec0b4a518dbe8150410b0e6191.json  query-9978e9199895c9fc8fe8f7fcfc30ff8d2a2d586e116a5b94f8e40e7c2971a110.json  query-bece50bc2ce198404dbdea3c980e5a1d3940f74007ecf6ebfd48b7a240001747.json  query-bee5518b7ca0d2d937a14d346fcc80de1018f7c685e2356ee84d8882ba3cd554.json  query-df547cbddb771167af7188799cbdfc473065768ec9e1b7791b2a2cb03ddc07b9.json  query-ed40414712a25612c336364c52181f98531a801fbe8bdd885683f56c291e3337.json
docker/: build.dockerfile
migrations/: 20260116092854_initial_schema.sql
prisma/: schema.prisma
scripts/: env.sh  healthcheck.py  start.sh  start_production.sh
src/: config.rs  db.rs  main.rs  prisma.rs  views.rs
src/app/: models.py  serializers.py  views.py
src/app/alembic/: env.py
src/app/alembic/versions/: 738a796c3f0a_.py  738a796c3f0b_.py  7a76c257df70_.py  85ece6cfed22_.py
src/core/: app.py  config.py  db.py
